--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,15 @@ body {
 
 /* Table Styles */
 .table-wrapper {
-    margin: 20px 10px;
+    
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow: hidden;
     max-height: 500px;
-    display: flex;
+    
     flex-direction: column;
+      overflow: auto;
+  
 }
 
 .fl-table {
@@ -28,7 +30,7 @@ body {
     white-space: nowrap;
     background-color: white;
     flex: 1;
-    display: flex;
+   
     flex-direction: column;
 }
 
