--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
   background: #f4f7fc;
-  min-height: 100vh; /* Ensure body takes at least full viewport height */
+  min-height: 100vh; /* Ensure body takes  least full viewport height */
   width: 100vw; /* Ensure body takes full viewport width */
   overflow-x: hidden; /* Prevent horizontal scrolling */
 }
