--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background: #f4f7fc;
   min-height: 100vh; /* Ensure body takes  least full viewport height */
-  width: 100vw; /* Ensure body takes full viewport width */
+  width: 100vw; /* Ensure body  full viewport width */
   overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
