--- a/css/general.css
+++ b/css/general.css
@@ -1,4 +1,4 @@
-	 /*POP UP CSS START*/  
+ /* POP UP CSS START */  
 
   .popup-overlay {
     position: fixed;
@@ -81,4 +81,53 @@
     background-color: #45a049;
   }
 
-  /*POP UP CSS END*/  
+  /* POP UP CSS END */  
+
+  /* LOADER CSS STARTS */
+
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    display: none; 
+}
+
+.loader {
+    width: 50px;
+    aspect-ratio: 1;
+    display: grid;
+    color: #4285f4; 
+    background:
+        linear-gradient(90deg,currentColor 2px,#0000 0 calc(100% - 2px),currentColor 0) center/100% 14px,
+        linear-gradient(0deg, currentColor 2px,#0000 0 calc(100% - 2px),currentColor 0) center/14px 100%,
+        linear-gradient(currentColor 0 0) center/100% 2px,
+        linear-gradient(currentColor 0 0) center/2px 100%;
+    background-repeat: no-repeat;
+    animation: l6 4s infinite linear;
+}
+
+.loader::before,
+.loader::after {
+    content: "";
+    grid-area: 1/1;
+    background: inherit;
+    transform-origin: inherit;
+    animation: inherit;
+}
+
+.loader::after {
+    animation-duration: 2s;
+}
+
+@keyframes l6 {
+    100% {transform:rotate(1turn)}
+}
+
+/* LOADER CSS ENDS*/
